--- a/SignIn/src/test/htmltest/askforleave.html
+++ b/SignIn/src/test/htmltest/askforleave.html
@@ -9,6 +9,9 @@
     <!--bootstrap-->
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="./bootstrap.min.css">
+
+    <link
+
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./index.css">
@@ -49,7 +52,25 @@
             <span>当前位置 >> 个人中心 >> 签到管理 >> 请假审批</span>
         </div>
         <hr style="border-color: black; margin-top: 0px; border-style: dashed; margin-bottom: 0px;">
-
+        <div id="leaveuser">
+            <table class="table table-bordered">
+                <tr>
+                    <th>Username</th>
+                    <th>Something</th>
+                    <th>Time</th>
+                    <th>Approve</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>
+                        <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 
     <div id="footer">
